Updated index.html to have links for assignment, project, experiments

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,11 @@
     <p>This is the landing page of my web application, which is hosted on openshift.
         As of start, I have created a simple Node js application to print 'Hello World!'</p>
     <ul>
-        <li>Append '/hello' to the end of the application URL to see 'Hello World!' message.</li>
+        <li>Setup Assignment : Append '/hello' to the end of the application URL to see 'Hello World!' message.</li>
+        <li><a href="assignment">Assignment</a> </li>
+        <li><a href="project">Project</a> </li>
+        <li><a href="experiments">Experiments</a> </li>
     </ul>
-
 
 <!-- FOOTER SECTION - Before closing </body> tag -->
 
