Worked to improve profile page under experiment/bootstrap and then transfered files to /public/index.htmlpage

--- a/public/experiments/bootstrap/index.html
+++ b/public/experiments/bootstrap/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS local fallback -->
     <script>
         $(document).ready(function() {
@@ -29,9 +30,9 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Assignment</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="#">Experiment</a></li>
             </ul>
         </div>
     </div>
@@ -45,8 +46,9 @@
 
 <div class="container-fluid bg-2 text-center">
     <h3>About Me</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+        make a type specimen book</p>
 </div>
 
 <div class="container-fluid bg-3 text-center">
@@ -58,24 +60,34 @@
         <div class="col-sm-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna</p>
-            <img src="images/me.jpeg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+            <img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
         </div>
         <div class="col-sm-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna</p>
-            <img src="images/me.jpeg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+            <img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
         </div>
         <div class="col-sm-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna</p>
-            <img src="images/me.jpeg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+            <img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
         </div>
     </div>
 </div>
 
-<footer class="container-fluid bg-4 text-center">
-    <p>Sanjiv Kumar 2016 | All Rights Reserved</p>
-</footer>
+<!--<footer class="container-fluid bg-4 text-center">-->
+    <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
+<!--</footer>-->
+
+<footer class="footer">
+    <div class="container text-right">
+        <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
+        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
+    </div><!--End container-->
+</footer><!--End footer 2-->
+
 
 <!--JavaScript files-->
 <!--jQuery CDN-->
