--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel = "stylesheet" href = "css/style.css">
 
     <!-- Optional Theme
@@ -18,17 +19,78 @@
 </head>
 <body>
 
-    <h1>Hi, This is Sanjiv</h1>
-    <p>This is the landing page of my web application, which is hosted on openshift.
-        As of start, I have created a simple Node js application to print 'Hello World!'</p>
-    <ul>
-        <li>Setup Assignment : Append '/hello' to the end of the application URL to see 'Hello World!' message.</li>
-        <li><a href="assignment">Assignment</a> </li>
-        <li><a href="project">Project</a> </li>
-        <li><a href="experiments">Experiments</a> </li>
-    </ul>
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Welcome</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Assignment</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="#">Experiment</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container-fluid bg-1 text-center">
+    <h3>Sanjiv Kumar</h3>
+    <img src="images/me.jpeg" class="img-circle img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+    <h3>Computer Science Graduate Student | Northeastern University</h3>
+</div>
+
+<div class="container-fluid bg-2 text-center">
+    <h3>About Me</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+        make a type specimen book</p>
+</div>
+
+<div class="container-fluid bg-3 text-center">
+    <h3>My Work</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <!--<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>-->
+    <div class="row">
+        <div class="col-sm-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna</p>
+            <img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+        </div>
+        <div class="col-sm-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna</p>
+            <img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+        </div>
+        <div class="col-sm-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna</p>
+            <img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+        </div>
+    </div>
+</div>
+
+<!--<footer class="container-fluid bg-4 text-center">-->
+<!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
+<!--</footer>-->
+
 
 <!-- FOOTER SECTION - Before closing </body> tag -->
+
+<footer class="footer">
+    <div class="container text-right">
+        <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
+        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
+    </div><!--End container-->
+</footer><!--End footer 2-->
 
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
