Added links for assignment, experiments and project on profile page

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Assignment</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">Experiment</a></li>
+                <li><a href="assignment" target="_blank">Assignment</a></li>
+                <li><a href="project" target="_blank">Project</a></li>
+                <li><a href="experiments" target="_blank">Experiment</a></li>
             </ul>
         </div>
     </div>
