Started working on assignment 1, completed home.html and created pages for register and login

--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -11,13 +11,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <!-- Optional Theme
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    -->
-    <title>Web Development CS5610 Spring 2016</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Register Page</title>
 </head>
 <body>
-
 
 
 <!-- FOOTER SECTION - Before closing </body> tag -->
