Created Register.html and changed the name of assignment homepage to home.html

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="assignment" target="_blank">Assignment</a></li>
+                <li><a href="assignment/home.html" target="_blank">Assignment</a></li>
                 <li><a href="project" target="_blank">Project</a></li>
                 <li><a href="experiments" target="_blank">Experiment</a></li>
             </ul>
