--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment Register Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
 </head>
 <body>
 
@@ -28,8 +28,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
+                <!--<li><a href="register.html">Register</a></li>-->
+                <!--<li><a href="login.html">Login</a></li>-->
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -46,44 +46,13 @@
             <ul class="nav nav-sidebar">
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">profile</a></li>
-                <li><a href="admin.html">Admin</a></li>
+                <li class="active"><a href="#">Admin</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Register</h1>
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">Password:</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="verify_pswd" class="col-sm-2 control-label">Verify Password:</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="verify_pswd" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="email" placeholder="Email">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-block">Register</button>
-                    </div>
+            <h1 class="page-header">Admin</h1>
 
-                </div>
-            </form>
         </div>
     </div>
 </div>
