--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -46,7 +46,7 @@
             <ul class="nav nav-sidebar">
                 <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">profile</a></li>
-                <li><a href="#">Admin</a></li>
+                <li><a href="admin.html">Admin</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </div>
