--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Login Page</title>
 </head>
 <body>
 
@@ -46,7 +46,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">profile</a></li>
-                <li><a href="#">Admin</a></li>
+                <li><a href="admin.html">Admin</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </div>
