--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment profile Page</title>
 </head>
 <body>
 
@@ -28,8 +28,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
+                <!--<li><a href="register.html">Register</a></li>-->
+                <!--<li><a href="login.html">Login</a></li>-->
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -46,7 +46,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li class="active"><a href="#">profile</a></li>
-                <li><a href="#">Admin</a></li>
+                <li><a href="admin.html">Admin</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </div>
