--- a/public/index.html
+++ b/public/index.html
@@ -86,9 +86,9 @@
 <footer class="footer">
     <div class="container text-right">
         <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
-        <a href="#"><i class="fa fa-github"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="https://github.com/mrsan22/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
     </div><!--End container-->
 </footer><!--End footer 2-->
 
