--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -51,64 +51,42 @@
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Forms</h1>
+            <h1 class="page-header">Forms: Registration Form</h1>
             <ul class="nav nav-tabs">
+
                 <li role="presentation"><a href="forms.html">Forms</a></li>
                 <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
             </ul>
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered">
-                    <tr>
-                        <th><span class="caret"></span> Form Name</th>
-                        <th>Action</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="text" class="form-control text" placeholder="name">
-                        </td>
-                        <td>
+
+            <div class="form-fields container-fluid col-">
+                <div class="row">
+                    <div class="col-xs-5">
+                    <label for="fname">First Name:</label>
+                    </div>
+                    </div>
+                <div class="row">
+                    <form>
+                        <div class="form-group col-xs-8">
+                            <!--<label for="fname">First Name:</label>-->
+                            <input type="text" class="form-control" id="fname" placeholder="First Name">
+                        </div>
+                        <div class="col-xs-4">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
-                                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><a href="form-fields.html">Registration Form</a></td>
-                        <td>
-                            <a href="#">
-                                <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                             </a>
                             <a href="#">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><a href="form-fields.html">Contact List</a></td>
-                        <td>
-                            <a href="#">
-                                <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </a>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><a href="form-fields.html">To Do List</a></td>
-                        <td>
-                            <a href="#">
-                                <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
-                            </a>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
+                        </div>
+                        <!--<div class="form-group">-->
+                            <!--<label for="lname">Last Name:</label>-->
+                            <!--<input type="password" class="form-control" id="lname" placeholder="Last Name">-->
+                        <!--</div>-->
+                    </form>
+                </div>
             </div>
         </div>
     </div>
