--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-block">Login</button>
+                        <button type="submit" class="btn btn-default btn-block">Update</button>
                     </div>
 
                 </div>
