Reformatting of some files

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel = "stylesheet" href = "css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Optional Theme
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -41,7 +41,8 @@
 
 <div class="container-fluid bg-1 text-center">
     <h3>Sanjiv Kumar</h3>
-    <img src="images/me.jpeg" class="img-circle img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+    <img src="images/me.jpeg" class="img-circle img-responsive" style="display:inline" alt="Myself" width="250"
+         height="250">
     <h3>Computer Science Graduate Student | Northeastern University</h3>
 </div>
 
@@ -54,24 +55,29 @@
 
 <div class="container-fluid bg-3 text-center">
     <h3>My Work</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.</p>
     <!--<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>-->
     <div class="row">
         <div class="col-sm-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna</p>
-            <img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+            <img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"
+                 height="250">
         </div>
         <div class="col-sm-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna</p>
-            <img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+            <img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250"
+                 height="250">
         </div>
         <div class="col-sm-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna</p>
-            <img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250" height="250">
+            <img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"
+                 height="250">
         </div>
     </div>
 </div>
@@ -97,6 +103,6 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src = "js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
