--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -9,7 +9,7 @@
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel = "stylesheet" href = "css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
 </head>
@@ -18,7 +18,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -133,6 +134,6 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src = "js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
