updated form-fields.html by adding more elements to the form

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -58,7 +58,7 @@
                 <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
             </ul>
 
-            <div class="form-fields container-fluid col-">
+            <div class="form-fields container-fluid">
                 <div class="row">
                     <div class="col-xs-5">
                     <label for="fname">First Name:</label>
@@ -67,7 +67,6 @@
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-8">
-                            <!--<label for="fname">First Name:</label>-->
                             <input type="text" class="form-control" id="fname" placeholder="First Name">
                         </div>
                         <div class="col-xs-4">
@@ -81,10 +80,85 @@
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
                         </div>
-                        <!--<div class="form-group">-->
-                            <!--<label for="lname">Last Name:</label>-->
-                            <!--<input type="password" class="form-control" id="lname" placeholder="Last Name">-->
+                    </form>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5">
+                        <label for="lname">Last Name:</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <form>
+                        <div class="form-group col-xs-8">
+                            <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="#">
+                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5">
+                        <label for="dob">Date of Birth:</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <form>
+                        <div class="form-group col-xs-8">
+                            <input type="date" class="form-control" id="dob" placeholder="Select Date">
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="#">
+                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5">
+                        <label for="dropdownMenu1">Gender:</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <form>
+                        <!--<div class="form-group col-xs-8">-->
+                            <!---->
                         <!--</div>-->
+                        <div class="form-group dropdown col-xs-8">
+                            <button class="btn btn-default dropdown-toggle " type="button" id="dropdownMenu1"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Male
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <li><a href="#">Female</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="#">
+                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                        </div>
                     </form>
                 </div>
             </div>
