made few changes to meet the requirements such as navigating to different html pages etc.

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -248,6 +248,11 @@
                         <div class="form-group col-xs-8">
                             <select class="form-control" id="sel2">
                                 <option>Single Line Text</option>
+                                <option>Date</option>
+                                <option>Dropdown</option>
+                                <option>Checkboxes</option>
+                                <option>Radio buttons</option>
+                                <option>Paragraph Text Field</option>
                             </select>
                         </div>
                         <div class="col-xs-4">
