--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Register</h1>
-            <form class="form-horizontal" action="profile.html">
+            <form class="form-horizontal">
                 <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
@@ -79,7 +79,8 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-block">Register</button>
+                        <a href="profile.html" class="btn btn-default btn-block">Register</a>
+                        <!--<button type="submit" class="btn btn-default btn-block">Register</button>-->
                     </div>
 
                 </div>
