--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -9,6 +9,7 @@
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/dashboard.css">
     <link rel = "stylesheet" href = "css/style.css">
 
     <title>Web Development CS5610 Spring 2016-Assignment Register Page</title>
