--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -33,6 +33,10 @@
                 <li><a href="login.html">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
+                <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li class="visible-xs"><a href="profile.html">profile</a></li>
+                <li class="visible-xs"><a href="admin.html">Admin</a></li>
+                <li class="visible-xs"><a href="#">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
