Made some changes to all html files to align to requirements

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Admin Page</title>
 </head>
 <body>
 
@@ -37,7 +37,7 @@
                 <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs"><a href="profile.html">profile</a></li>
                 <li class="active visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="visible-xs"><a href="#">Forms</a></li>
+                <li class="visible-xs"><a href="forms.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
@@ -53,7 +53,7 @@
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">profile</a></li>
                 <li class="active"><a href="#">Admin</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -72,7 +72,7 @@
                             <input type="text" class="form-control text" placeholder="username">
                         </td>
                         <td>
-                            <input type="text" class="form-control" placeholder="password">
+                            <input type="password" class="form-control" placeholder="password">
                         </td>
                         <td>
                             <input type="text" class="form-control" placeholder="role1,role2">
