--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Form Fields Page</title>
 </head>
 <body>
 
@@ -55,7 +55,7 @@
                 <li class="active"><a href="forms.html">Forms</a></li>
             </ul>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-10 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Forms: Registration Form</h1>
             <ul class="nav nav-tabs">
 
@@ -213,7 +213,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-8">
-                        <label for="radio1">Licence Agreement:</label>
+                        <label for="radio1">License Agreement:</label>
                     </div>
                 </div>
                 <div class="row">
@@ -250,7 +250,7 @@
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-8">
+                        <div class="form-group col-xs-7">
                             <select class="form-control" id="sel2">
                                 <option>Single Line Text</option>
                                 <option>Date</option>
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-xs-4">
                             <a href="#">
-                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-plus pad-left" aria-hidden="true"></span>
                             </a>
                         </div>
                     </form>
