--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment Home Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Forms Page</title>
 </head>
 <body>
 
@@ -36,7 +36,7 @@
                 <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs"><a href="profile.html">profile</a></li>
                 <li class="visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="active visible-xs"><a href="#">Forms</a></li>
+                <li class="active visible-xs"><a href="forms.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
