--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -19,7 +19,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -36,7 +37,7 @@
                 <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs"><a href="profile.html">profile</a></li>
                 <li class="visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="visible-xs"><a href="#">Forms</a></li>
+                <li class="visible-xs"><a href="forms.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
@@ -52,27 +53,27 @@
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Login</h1>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username:</label>
+                    <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">Password:</label>
+                    <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.html" class="btn btn-default btn-block">Login</a>
+                        <a href="profile.html" class="btn btn-primary btn-block">Login</a>
                         <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
                     </div>
 
