--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Web Development CS5610 Spring 2016-Assignment profile Page</title>
+    <title>Web Development CS5610 Spring 2016-Assignment Profile Page</title>
 </head>
 <body>
 
@@ -36,7 +36,7 @@
                 <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li class="active visible-xs"><a href="profile.html">profile</a></li>
                 <li class="visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="visible-xs"><a href="#">Forms</a></li>
+                <li class="visible-xs"><a href="forms.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
@@ -52,45 +52,45 @@
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li class="active"><a href="#">profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Profile</h1>
             <form class="form-horizontal" action="profile.html">
                 <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username:</label>
+                    <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">Password:</label>
+                    <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="fname" class="col-sm-2 control-label">First Name:</label>
+                    <label for="fname" class="col-sm-2">First Name:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="fname" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="lname" class="col-sm-2 control-label">Last Name:</label>
+                    <label for="lname" class="col-sm-2">Last Name:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="lname" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email:</label>
+                    <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="email" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-block">Update</button>
+                        <a href="profile.html" class="btn btn-primary btn-block">Update</a>
                     </div>
 
                 </div>
