--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -36,7 +36,7 @@
                 <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs"><a href="profile.html">profile</a></li>
                 <li class="visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="visible-xs"><a href="#">Forms</a></li>
+                <li class="visible-xs"><a href="forms.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
@@ -52,39 +52,39 @@
                 <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Register</h1>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username:</label>
+                    <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">Password:</label>
+                    <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="verify_pswd" class="col-sm-2 control-label">Verify Password:</label>
+                    <label for="verify_pswd" class="col-sm-2">Verify Password:</label>
                     <div class="col-sm-10">
                         <input type="password" class="form-control" id="verify_pswd" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email:</label>
+                    <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="email" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.html" class="btn btn-default btn-block">Register</a>
+                        <a href="profile.html" class="btn btn-primary btn-block">Register</a>
                         <!--<button type="submit" class="btn btn-default btn-block">Register</button>-->
                     </div>
 
