Improved CSS for form-fields.html page

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -65,13 +65,13 @@
 
             <div class="form-fields container-fluid">
                 <div class="row">
-                    <div class="col-xs-5">
+                    <div class="col-xs-5 p-left">
                     <label for="fname">First Name:</label>
                     </div>
                     </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-6 col-sm-7">
+                        <div class="form-group col-xs-6 col-sm-7 p-left">
                             <input type="text" class="form-control" id="fname" placeholder="First Name">
                         </div>
                         <div class="col-xs-6 col-sm-5">
@@ -92,13 +92,13 @@
                     </form>
                 </div>
                 <div class="row">
-                    <div class="col-xs-5">
+                    <div class="col-xs-5 p-left">
                         <label for="lname">Last Name:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-6 col-sm-7">
+                        <div class="form-group col-xs-6 col-sm-7 p-left">
                             <input type="text" class="form-control" id="lname" placeholder="Last Name">
                         </div>
                         <div class="col-xs-6 col-sm-5">
@@ -119,13 +119,13 @@
                     </form>
                 </div>
                 <div class="row">
-                    <div class="col-xs-5">
+                    <div class="col-xs-5 p-left">
                         <label for="dob">Date of Birth:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-6 col-sm-7">
+                        <div class="form-group col-xs-6 col-sm-7 p-left">
                             <input type="date" class="form-control" id="dob" placeholder="Select Date">
                         </div>
                         <div class="col-xs-6 col-sm-5">
@@ -146,16 +146,13 @@
                     </form>
                 </div>
                 <div class="row">
-                    <div class="col-xs-5">
+                    <div class="col-xs-5 p-left">
                         <label for="sel1">Gender:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
-                        <!--<div class="form-group col-xs-8">-->
-                            <!---->
-                        <!--</div>-->
-                        <div class="form-group col-xs-6 col-sm-7">
+                        <div class="form-group col-xs-6 col-sm-7 p-left">
                             <select class="form-control" id="sel1">
                                 <option>Male</option>
                                 <option>Female</option>
@@ -179,19 +176,15 @@
                     </form>
                 </div>
                 <div class="row">
-                    <div class="col-xs-5">
+                    <div class="col-xs-5 p-left">
                         <label for="chkbox1">Roles:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-6 col-sm-7 chkbox1">
-                            <div class="checkbox"><label><input type="checkbox" id="chkbox1">Admin</label></div>
-                        <!--</div>-->
-                        <!--<div class=" form-group col-xs-6 col-sm-7 checkbox">-->
+                        <div class="form-group col-xs-6 col-sm-7 p-left">
+                            <div class="checkbox chkbox1"><label><input type="checkbox" id="chkbox1">Admin</label></div>
                             <div class="checkbox"><label><input type="checkbox" val="">Student</label></div>
-                        <!--</div>-->
-                        <!--<div class="form-group col-xs-6 col-sm-7 checkbox">-->
                             <div class="checkbox"><label><input type="checkbox" value="">User</label></div>
                         </div>
                         <div class="col-xs-6 col-sm-5">
@@ -212,14 +205,14 @@
                     </form>
                 </div>
                 <div class="row">
-                    <div class="col-xs-8">
+                    <div class="col-xs-8 p-left">
                         <label for="radio1">License Agreement:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
-                        <div class="col-xs-6 col-sm-7 form-group rad1">
-                            <div class="radio"><label><input type="radio" name="optradio" id="radio1">Yes</label></div>
+                        <div class="col-xs-6 col-sm-7 form-group p-left">
+                            <div class="radio rad1"><label><input type="radio" name="optradio" id="radio1">Yes</label></div>
                             <div class="radio"><label><input type="radio" name="optradio">No</label></div>
                         </div>
 
@@ -242,13 +235,13 @@
                 </div>
                 <hr>
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-6 p-left">
                         <label for="sel2">Add New Field:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-6 col-sm-7">
+                        <div class="form-group col-xs-6 col-sm-7 p-left">
                             <select class="form-control" id="sel2">
                                 <option>Single Line Text</option>
                                 <option>Date</option>
