minor update in home page

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- Optional Theme
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     -->
-    <title>Web Development CS5610 Spring 2016</title>
+    <title>Sanjiv Kumar | Web Development Course</title>
 </head>
 <body>
 
@@ -202,14 +202,30 @@
 
 <!-- FOOTER SECTION - Before closing </body> tag -->
 
-<footer class="footer">
-    <div class="container text-right">
-        <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
-        <a href="#" target="_blank"><i class="fa fa-github fa-lg"></i></a>
-        <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
-        <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg"></i></a>
-    </div><!--End container-->
-</footer><!--End footer 2-->
+<!--<footer class="footer">-->
+    <!--<div class="container text-right">-->
+        <!--&lt;!&ndash;<p>Sanjiv Kumar 2016 | All Rights Reserved</p>&ndash;&gt;-->
+        <!--<a href="#" target="_blank"><i class="fa fa-github fa-lg"></i></a>-->
+        <!--<a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>-->
+        <!--<a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg"></i></a>-->
+    <!--</div>&lt;!&ndash;End container&ndash;&gt;-->
+<!--</footer>&lt;!&ndash;End footer 2&ndash;&gt;-->
+
+<footer class="footer navbar-fixed-bottom">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6">
+                <p class="pad-top">Sanjiv Kumar | <i class="fa fa-copyright"></i> 2016</p>
+            </div>
+
+            <div class="col-xs-6 text-right">
+                <a href="#" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
