Changed 'Action' to 'Actions' on admin.html

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -65,7 +65,7 @@
                         <th><span class="caret"></span> Username</th>
                         <th><span class="caret"></span> Password</th>
                         <th><span class="caret"></span> Role</th>
-                        <th>Action</th>
+                        <th>Actions</th>
                     </tr>
                     <tr>
                         <td>
