modified index.html and app.js under experiments/foursqr api to create a UI for searching the API

--- a/public/experiments/foursquare-api/index.html
+++ b/public/experiments/foursquare-api/index.html
@@ -14,11 +14,26 @@
     <!-- Optional Theme
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     -->
-    <title>Web Development CS5610 Spring 2016</title>
+    <title>Foursquare API demo</title>
 </head>
 <body>
 
-
+<div class="container">
+    <h1> Demo Search FourSquare API</h1>
+    <div class="row">
+        <div class="col-xs-6">
+            <input id="restName" class="form-control" placeholder="Dosa Factory, Qdoba...">
+        </div>
+        <div class="col-xs-6">
+            <input id="location" class="form-control" placeholder="Boston">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <button id="searchRest" class="btn btn-primary btn-block">Search</button>
+        </div>
+    </div>
+</div>
 <!-- FOOTER SECTION - Before closing </body> tag -->
 
 <!-- jQuery -->
