footer on my  home page is not fixed now

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
     <!--</div>&lt;!&ndash;End container&ndash;&gt;-->
 <!--</footer>&lt;!&ndash;End footer 2&ndash;&gt;-->
 
-<footer class="footer navbar-fixed-bottom">
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-xs-6">
