Worked on foursqaure api under experiments..was able to fetch the data from the API

--- a/public/experiments/foursquare-api/index.html
+++ b/public/experiments/foursquare-api/index.html
@@ -22,15 +22,15 @@
     <h1> Demo Search FourSquare API</h1>
     <div class="row">
         <div class="col-xs-6">
-            <input id="restName" class="form-control" placeholder="Dosa Factory, Qdoba...">
+            <input id="restNametxt" class="form-control" placeholder="Dosa Factory, Qdoba...(optional)" value="Sushi">
         </div>
         <div class="col-xs-6">
-            <input id="location" class="form-control" placeholder="Boston">
+            <input id="locationtxt" class="form-control" placeholder="Boston" value="Boston">
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
-            <button id="searchRest" class="btn btn-primary btn-block">Search</button>
+        <div class="col-xs-12 top-margin">
+            <button id="searchRestbtn" class="btn btn-primary btn-block">Search</button>
         </div>
     </div>
 </div>
