Tested Yelp API

--- a/public/experiments/foursquare-api/index.html
+++ b/public/experiments/foursquare-api/index.html
@@ -14,12 +14,12 @@
     <!-- Optional Theme
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     -->
-    <title>Foursquare API demo</title>
+    <title>Yelp API demo</title>
 </head>
 <body>
 
 <div class="container">
-    <h1> Demo Search FourSquare API</h1>
+    <h1> Demo Search Yelp API</h1>
     <div class="row">
         <div class="col-xs-6">
             <input id="restNametxt" class="form-control" placeholder="Dosa Factory, Qdoba...(optional)" value="Sushi">
@@ -41,6 +41,9 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+<script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+<script src = "js/oauth.js"></script>
 <script src = "js/app.js"></script>
 </body>
 </html>
